force-app/main/default/objects/Review_Comment__c/Review_Comment__c.object-meta.xml
<CustomObject>
    <description>Two-way conversation on store reviews (SV ↔ Store Manager) - 店舗レビューへのコメント（SV ↔ 店長）</description>
    <label>レビューコメント</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>コメント番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>レビューコメント</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>