force-app/main/default/objects/Review_Comment__c/fields/Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>コメント日時</label>
    <type>DateTime</type>
</CustomField>