force-app/main/default/objects/Review_Comment__c/fields/Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Type__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SV Advice</fullName>
                <label>SVアドバイス</label>
            </value>
            <value>
                <fullName>Manager Response</fullName>
                <label>店長回答</label>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>一般</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>