force-app/main/default/objects/Review_Comment__c/fields/Commenter__c.field-meta.xml
<CustomField>
    <fullName>Commenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コメント者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Review_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>