force-app/main/default/objects/Review_Comment__c/fields/Parent_Comment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親コメント</label>
    <referenceTo>Review_Comment__c</referenceTo>
    <relationshipLabel>返信</relationshipLabel>
    <relationshipName>Child_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>