force-app/main/default/objects/Review_Comment__c/fields/Store_Review__c.field-meta.xml
<CustomField>
    <fullName>Store_Review__c</fullName>
    <label>店舗レビュー</label>
    <referenceTo>Store_Review__c</referenceTo>
    <relationshipLabel>コメント</relationshipLabel>
    <relationshipName>Review_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>